# AI-Models-Research

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PEER-REVIEW.md  README.md  SECURITY.md  SUMMARY.md  data-sources.md  glossary.md  index.html  limitations.md  mkdocs.yml  pyproject.toml  references.bib  requirements.txt  research-methodology.md  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark-update.md  model-update.md  source-correction.md
.github/workflows-pending/: README.md  build-docs.yml  links.yml  markdown-lint.yml
01-introduction/: index.html
02-foundation-models/: index.html
03-transformer-architecture/: index.html
04-training-and-post-training/: index.html
05-scaling-laws/: index.html
06-reasoning-models/: index.html
07-agentic-ai/: index.html
08-multimodal-models/: index.html
09-benchmarking/: index.html
10-factuality-and-hallucination/: index.html
11-long-context/: index.html
12-tokenization/: index.html
13-inference/: index.html
14-latency-and-throughput/: index.html
15-token-economics/: index.html
16-energy-use/: index.html
17-hardware-and-memory/: index.html
18-open-vs-closed-models/: index.html
19-security-and-privacy/: index.html
20-model-selection-framework/: index.html
21-research-gaps/: index.html
appendices/benchmark-glossary/: index.html
appendices/formulas/: index.html
appendices/hardware-glossary/: index.html
appendices/model-release-timeline/: index.html
appendices/source-quality-framework/: index.html
assets/diagrams/: .gitkeep
benchmarks/agents-and-computer-use/: index.html
benchmarks/benchmark-limitations/: index.html
benchmarks/benchmark-overview/: index.html
benchmarks/coding/: index.html
benchmarks/factuality/: index.html
benchmarks/knowledge-and-reasoning/: index.html
benchmarks/long-context/: index.html
benchmarks/multilingual/: index.html
benchmarks/multimodal/: index.html
comparisons/coding-models/: index.html
comparisons/efficient-models/: index.html
comparisons/frontier-models/: index.html
comparisons/long-context-models/: index.html
comparisons/model-selection-matrix/: index.html
comparisons/multimodal-models/: index.html
comparisons/open-weight-models/: index.html
comparisons/reasoning-models/: index.html
data/: benchmarks.csv  context-windows.csv  energy-studies.csv  models.csv  pricing.csv  sources.csv
data/schema/: benchmarks.schema.json  (+2 more)
docs/: 01-introduction.md  02-foundation-models.md  03-transformer-architecture.md  04-training-and-post-training.md  05-scaling-laws.md  06-reasoning-models.md  07-agentic-ai.md  08-multimodal-models.md  09-benchmarking.md  10-factuality-and-hallucination.md  11-long-context.md  12-tokenization.md  13-inference.md  14-latency-and-throughput.md  15-token-economics.md  16-energy-use.md  17-hardware-and-memory.md  18-open-vs-closed-models.md  19-security-and-privacy.md  20-model-selection-framework.md  21-research-gaps.md  index.md
notebooks/: benchmark-comparison.ipynb  energy-analysis.ipynb  latency-analysis.ipynb  token-cost-analysis.ipynb
peer-review/: ai-models-research-Peer-Review.docx
scripts/: _common.py  build_release_timeline.py  calculate_token_costs.py  estimate_memory.py  generate_benchmark_tables.py  generate_model_tables.py  validate_links.py  validate_sources.py  validate_tables.py
search/: search_index.json
web/: index.html
(+68 files in other folders)
